--- a/src/main/resources/template/commit_history.template.html
+++ b/src/main/resources/template/commit_history.template.html
@@ -90,7 +90,7 @@
 			
 		        <div class="content">
 			        <div class="content-1">
-                        <table id ="simpleTable">
+                        <table id ="simpleTable" class="mst">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
@@ -125,7 +125,7 @@
                         </table>
 				    </div>
 			        <div class="content-2">
-                        <table id ="simpleTable">
+                        <table id ="simpleTable" class="mst">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
@@ -160,7 +160,7 @@
                         </table>
 				    </div>
 			        <div class="content-3">
-                        <table id ="simpleTable">
+                        <table id ="simpleTable" class="mst">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
