--- a/src/main/resources/css/style_commit_history.css
+++ b/src/main/resources/css/style_commit_history.css
@@ -100,9 +100,9 @@
     background: #fff;
 	position: relative;
     width: 100%;
-	height: 2000px;
+	height: 100%;
 	z-index: 5;
-	overflow: hidden;
+	/*overflow: hidden;*/
     box-shadow: 0 -2px 3px -2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.1);
     border-radius: 0 3px 3px 3px;
 }
