--- a/src/main/resources/template/commit_history.template.html
+++ b/src/main/resources/template/commit_history.template.html
@@ -27,9 +27,9 @@
                 width: 100%;
                 font-family: Verdana, Roboto, 'Droid Sans', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic P     roN', sans-serif;
                 }
-                .mst tr {
+                .content tr {
                 }
-                .mst th {
+                .content th {
                 border: 0;
                 box-shadow: 0 0 10px 1px #CEECF5;
                 padding: 0;
@@ -41,7 +41,7 @@
                 color :black;
                 }
 
-                .mst th:hover {
+                .content th:hover {
                 background-color:yellow;
                 color:black;
                 /*-moz-box-shadow:10px 10px 20px #ffff99;*/
@@ -49,11 +49,11 @@
                 opacity:0.8;
                 }
 
-                .mst tr {
+                .content tr {
                 background-color: white;
                 }
 
-                .mst td {
+                .content td {
                 border: 0;
                 border-bottom: 1px dashed #5858FA;
                 border-left: 1px solid rgba(0, 0, 0, 0.1);
@@ -90,7 +90,7 @@
 			
 		        <div class="content">
 			        <div class="content-1">
-                        <table id ="simpleTable" class="mst">
+                        <table id ="simpleTable">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
@@ -125,7 +125,7 @@
                         </table>
 				    </div>
 			        <div class="content-2">
-                        <table id ="simpleTable" class="mst">
+                        <table id ="simpleTable">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
@@ -160,7 +160,7 @@
                         </table>
 				    </div>
 			        <div class="content-3">
-                        <table id ="simpleTable" class="mst">
+                        <table id ="simpleTable">
                             <thead>
                             <th data-sort="string"style="border-top-left-radius: 10px; width: 40px">差分</th>
                             <th data-sort="Int"style=" width: 70px">リビジョン</th>
